Bug 14829 - smbd crashes when "ea support" is set to no
Summary: smbd crashes when "ea support" is set to no
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-11 10:35 UTC by Ralph Böhme
Modified: 2021-09-13 13:47 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.15 cherry-picked from master (1.22 KB, patch)
2021-09-12 09:46 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2021-09-11 10:35:43 UTC
Triggers a talloc stackframe not freed in order assert. Have patch, need  bugnumber.
Comment 1 Samba QA Contact 2021-09-11 21:48:06 UTC
This bug was referenced in samba master:

926db374a615e88003c99a476f45981beb30f8cf
Comment 2 Ralph Böhme 2021-09-12 09:46:42 UTC
Created attachment 16804 [details]
Patch for 4.15 cherry-picked from master
Comment 3 Jeremy Allison 2021-09-12 18:39:41 UTC
Re-assigning to Jule for inclusion in 4.15.0.
Comment 4 Jule Anger 2021-09-13 07:41:08 UTC
Pushed to autobuild-v4-15-test.
Comment 5 Samba QA Contact 2021-09-13 08:55:31 UTC
This bug was referenced in samba v4-15-test:

92251109fa2211706380ba5729e6dbbcb94d1bd9
Comment 6 Jule Anger 2021-09-13 11:42:27 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2021-09-13 13:47:03 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.0rc7):

92251109fa2211706380ba5729e6dbbcb94d1bd9